src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_xCodeInLoadedXaml.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">

    <Button />    

    <x:Code>
        <![CDATA[
            void OnClick(object sender, System.EventArgs args)
        	{        	    
        	}	    
        ]]>
    </x:Code>
</DockPanel>
</Page>
